<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_digite"
        android:textAppearance="@android:style/TextAppearance.Material.Body1" />

    <EditText
        android:id="@+id/edit_numero"
        style="@style/txt_digite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberSigned"
        android:text="@string/txt_number" />

    <Button
        android:id="@+id/button"
        style="@style/btn_digite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="processar"
        android:text="@string/btn_digite" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_num_digitados" />

    <TextView
        android:id="@+id/txt_numeros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_num_digitados_result" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_quant_impares" />

    <TextView
        android:id="@+id/txt_impares"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_impares_result" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_quant_pares" />

    <TextView
        android:id="@+id/txt_pares"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_pares_result" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_soma" />

    <TextView
        android:id="@+id/txt_soma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="_" />
</LinearLayout>